# candapter

./: .gitignore  CMakeLists.txt  README.md
.trunk/: trunk.yaml
docs/: Design_Philosophy.md
include/: Candapter.h
src/: Candapter.cpp
